# STM32-Dual-Mode-LED-Player

./: CMakeLists.txt  README.md  STM32F412XX_FLASH.ld  使用手册.docx  维护日志.txt
App/: fatfs.c
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: dma.c  gpio.c  main.c  sdio.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
USB_DEVICE/App/: usbd_desc.c  usbd_storage_if.c  usbd_storage_if.h
cmake/stm32cubemx/: CMakeLists.txt
lcd_driver/: lcd_driver.c  lcd_driver.h  tft_font.c  tft_font.h
led_driver1/: led_driver1.c  led_driver1.h
led_driver2/: led_driver2.c  led_driver2.h
tf_driver/: tf_driver.c  tf_driver.h
灯效数据模板/: c2.csv  c5.csv  c6.csv
